--- a/index.html
+++ b/index.html
@@ -1,24 +1,14 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мій Хаб Проектів</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div id="app">
-        <h1>Ласкаво просимо до мого хабу проектів!</h1>
-        <p>Ось мої проекти:</p>
-        <div class="button-container">
-            <a href="lb1\index.html" target="_blank" class="project-button">ЛБ1 резюме</a>
-            <a href="lb2\index.html" target="_blank" class="project-button">ЛБ2 фiльми</a>
-            <a href="pz3\index.html" target="_blank" class="project-button">Проект 3</a>
-            <a href="pz4\index.html" target="_blank" class="project-button">Проект 4</a>
-            <a href="pz5\index.html" target="_blank" class="project-button">Проект 5</a>
-            <a href="pz6\index.html" target="_blank" class="project-button">Проект 6</a>
-            <a href="pz8\index.html" target="_blank" class="project-button">Проект 8</a>
-        </div>
-    </div>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+    <!--app-head-->
+  </head>
+  <body>
+    <div id="root"><!--app-html--></div>
+    <script type="module" src="/src/entry-client.jsx"></script>
+  </body>
 </html>
