--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="pz4\index.html" target="_blank" class="project-button">Проект 4</a>
             <a href="pz5\index.html" target="_blank" class="project-button">Проект 5</a>
             <a href="pz6\index.html" target="_blank" class="project-button">Проект 6</a>
-            <a href="pz8\index.html" target="_blank" class="project-button">Проект 8</a>
+            <a href="https://shop-my-one.vercel.app/" target="_blank" class="project-button">Проект 8</a>
         </div>
     </div>
 </body>
