--- a/pz4/index.html
+++ b/pz4/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>To-Do List</h1>
-    <div>
+    <div class="input-container">
         <input type="text" id="taskInput" placeholder="Введіть завдання">
         <button id="addTask">Додати завдання</button>
     </div>
