--- a/pz4/index.html
+++ b/pz4/index.html
@@ -8,11 +8,32 @@
 </head>
 <body>
     <h1>To-Do List</h1>
+
+    <button id="settingsButton">⚙️</button>
+    <a href="archive.html" id="archiveButton">📁</a>
+
+    <div id="settingsMenu" class="settings-menu">
+        <h2>Налаштування</h2>
+        <div class="setting-item">
+            <label>
+                <input type="checkbox" id="darkModeToggle">
+                Темна тема
+            </label>
+        </div>
+        <div class="setting-item">
+            <label for="bgUpload">Фон:</label>
+            <input type="file" id="bgUpload" accept="image/*">
+        </div>
+        <button id="closeSettings">Закрити</button>
+    </div>
+
     <div class="input-container">
         <input type="text" id="taskInput" placeholder="Введіть завдання">
         <button id="addTask">Додати завдання</button>
     </div>
+
     <ul id="taskList"></ul>
+
     <script src="script.js"></script>
 </body>
 </html>
